# fdk-mqa-assmentator

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
.github/workflows/: deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-mqa-assmentator.yaml  kustomization.yaml  service-fdk-mqa-assmentator.yaml
deploy/demo/: env.yaml
deploy/prod/: env.yaml
deploy/staging/: env.yaml
kafka/: create_topics.sh
kafka/schemas/: no.fdk.dataset.DatasetEvent.json
src/: error.rs  graph.rs  kafka.rs  lib.rs  main.rs  metrics.rs  schemas.rs  vocab.rs
tests/: integration_test.rs  kafka_utils.rs  utils.rs
