[package]
name = "fdk-mqa-assmentator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
apache-avro = "0.18.0"
futures = "0.3"
lazy_static = "1.5.0"
oxigraph = "0.4.9"
prometheus = "0.14.0"
rdkafka = "0.37.0"
schema_registry_converter = { version = "4.4.0", features = ["avro", "futures", "rustls_tls"], default-features=false }
serde = "1.0.219"
serde_derive = "1.0.219"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["json", "env-filter", "tracing-log"] }
uuid = "1.16.0"

[dev-dependencies]
sophia_api= "0.9.0"
sophia_isomorphism = "0.9.0"
sophia_turtle = "0.9.0"
