[package]
name = "fdk-mqa-assmentator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
apache-avro = "0.21.0"
futures = "0.3"
lazy_static = "1.5.0"
oxigraph = "0.5.5"
prometheus = "0.14.0"
rdkafka = "0.39.0"
schema_registry_converter = { version = "4.7.0", features = ["avro", "futures", "rustls_tls"], default-features=false }
serde = "1.0.228"
serde_derive = "1.0.228"
sha2 = "0.10.8"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.22", features = ["json", "env-filter", "tracing-log"] }
uuid = "1.21.0"

[dev-dependencies]
sophia_api= "0.9.0"
sophia_isomorphism = "0.9.0"
sophia_turtle = "0.9.0"
